--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <legend> Contato </legend>
 
-        <form spellcheck="" autocomplete="on" translate="yes" action="#">
+        <form spellcheck="" autocomplete="on" translate="yes" action="https://silvakwan1.github.io">
             <label for="matter" > <b>Assunto:</b>  </label>
             <select name="matter" id="matter">
                 <option value="complaint">Reclamação</option>
